--- a/wiki/it/Macro_Align_Object_to_View.html
+++ b/wiki/it/Macro_Align_Object_to_View.html
@@ -1,9 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Align Object to View/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Align+Object+to+View&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><a href="../de/Macro_Align_Object_to_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Objekt an Ansicht ausrichten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Align_Object_to_View.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Align Object to View (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Align_Object_to_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Align Object to View (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Align_Object_to_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Wyr&oacute;wnaj obiekt do widoku (100% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><a href="../ru/Macro_Align_Object_to_View.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Align Object to View/ru (33% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
+<li><a href="../ru/Macro_Align_Object_to_View.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Align Object to View/ru (15% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -72,15 +73,25 @@ Alinea l'obietto su la vista
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Questa macro posiziona e allinea l'oggetto selezionato alla Vista corrente.
 </p>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+<h2><span class="mw-headline" id="Usage">Usage</span></h2>
+</div>
+<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <ul><li>Orientare la visualizzazione, selezionare l'oggetto ed eseguire la macro</li>
 <li>L'oggetto assume il posizionamento delle coordinate della camera</li></ul>
+</div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Align_Object_to_View.png&amp;filetimestamp=20190607200906&amp;.html" class="mw-file-description"><img src="../File/Macro_Align_Object_to_View.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> 
-</p><p><b>Macro_Align_Object_to_View.FCMacro</b>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Align_Object_to_View.png&amp;filetimestamp=20190607200906&amp;.html" class="mw-file-description"><img src="../File/Macro_Align_Object_to_View.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p>
+</div> 
+<p><b>Macro_Align_Object_to_View.FCMacro</b>
 </p>
 <pre># This macro place your object selected to the position ActiveView (camera)
 # extact FCCamera
@@ -130,35 +141,38 @@ App.ActiveDocument.getObject(Nameelement).Placement=pl</pre>
 		</li>
 </ul>
 </center>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+<h2><span class="mw-headline" id="Credits">Credits</span></h2>
+</div>
+<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Crediti">Crediti</span></h2>
 <p>Grazie a rentlau_64 per il codice semplificato
 </p>
-<div style="clear:both"></div>
+</div>
 <!-- 
 NewPP limit report
-Cached time: 20250721153114
+Cached time: 20260119160039
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.040 seconds
-Preprocessor visited node count: 117/1000000
-Post&#8208;expand include size: 2113/2097152 bytes
+CPU time usage: 0.064 seconds
+Real time usage: 0.368 seconds
+Preprocessor visited node count: 126/1000000
+Post&#8208;expand include size: 2083/2097152 bytes
 Template argument size: 1132/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 5920/5000000 bytes
+Unstrip post&#8208;expand size: 6234/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.104      1 -total
-  9.73%    1.664      1 Template:Macro/it
-  6.69%    1.144      1 Template:Clear
-  5.96%    1.019      1 Template:MacroCode
+100.00%   20.479      1 -total
+ 58.91%   12.065      1 Template:Macro/it
+ 40.43%    8.280      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55110-0!canonical and timestamp 20250721153114 and revision id 1616486. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55110-0!canonical and timestamp 20260119160039 and revision id 1740995. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
