--- a/wiki/it/Macro_Align_Object_to_View.html
+++ b/wiki/it/Macro_Align_Object_to_View.html
@@ -77,12 +77,11 @@ Alinea l'obietto su la vista
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Questa macro posiziona e allinea l'oggetto selezionato alla Vista corrente.
+</p><p><span id="Usage"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <ul><li>Orientare la visualizzazione, selezionare l'oggetto ed eseguire la macro</li>
 <li>L'oggetto assume il posizionamento delle coordinate della camera</li></ul>
 </div>
@@ -151,12 +150,12 @@ App.ActiveDocument.getObject(Nameelement).Placement=pl</pre>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119160039
+Cached time: 20260119160049
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.064 seconds
-Real time usage: 0.368 seconds
+CPU time usage: 0.054 seconds
+Real time usage: 0.281 seconds
 Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 2083/2097152 bytes
 Template argument size: 1132/2097152 bytes
@@ -167,12 +166,12 @@ Unstrip post&#8208;expand size: 6234/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.479      1 -total
- 58.91%   12.065      1 Template:Macro/it
- 40.43%    8.280      1 Template:MacroCode
+100.00%   21.094      1 -total
+ 72.26%   15.243      1 Template:Macro/it
+ 26.71%    5.634      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55110-0!canonical and timestamp 20260119160039 and revision id 1740995. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55110-0!canonical and timestamp 20260119160049 and revision id 1740997. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
