--- a/wiki/it/Macro_Align_Object_to_View.html
+++ b/wiki/it/Macro_Align_Object_to_View.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Align_Object_to_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Objekt an Ansicht ausrichten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Align_Object_to_View.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Align Object to View (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Align_Object_to_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Align Object to View (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Align_Object_to_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Wyr&oacute;wnaj obiekt do widoku (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_Align_Object_to_View.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Align Object to View/ru (15% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -80,11 +80,8 @@ Alinea l'obietto su la vista
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <ul><li>Orientare la visualizzazione, selezionare l'oggetto ed eseguire la macro</li>
-<li>L'oggetto assume il posizionamento delle coordinate della camera</li></ul>
-</div>
+<li>L'oggetto assume il posizionamento delle coordinate della fotocamera</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Align_Object_to_View.png&amp;filetimestamp=20190607200906&amp;.html" class="mw-file-description"><img src="../File/Macro_Align_Object_to_View.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -150,28 +147,28 @@ App.ActiveDocument.getObject(Nameelement).Placement=pl</pre>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119160049
+Cached time: 20260119160109
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.281 seconds
-Preprocessor visited node count: 126/1000000
+CPU time usage: 0.046 seconds
+Real time usage: 0.077 seconds
+Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 2083/2097152 bytes
 Template argument size: 1132/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6234/5000000 bytes
+Unstrip post&#8208;expand size: 6235/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.094      1 -total
- 72.26%   15.243      1 Template:Macro/it
- 26.71%    5.634      1 Template:MacroCode
+100.00%    6.412      1 -total
+ 56.86%    3.646      1 Template:Macro/it
+ 41.58%    2.666      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55110-0!canonical and timestamp 20260119160049 and revision id 1740997. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55110-0!canonical and timestamp 20260119160109 and revision id 1740999. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
