--- a/wiki/it/Macro_Arch_Axis_System_Repartition.html
+++ b/wiki/it/Macro_Arch_Axis_System_Repartition.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Arch Axis System Repartition/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Arch+Axis+System+Repartition&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Arch_Axis_System_Repartition.html" class="mw-pt-progress mw-pt-progress--high" title="Makro Arch Achsen System-Neupartitionierung (91% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Arch_Axis_System_Repartition.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Arch Achsen System-Neupartitionierung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Arch_Axis_System_Repartition.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Arch Axis System Repartition (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Arch_Axis_System_Repartition.html" class="mw-pt-progress mw-pt-progress--med" title="Macro R&eacute;partition automatique du syst&egrave;me d'axes (64% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_Arch_Axis_System_Repartition.html" class="mw-pt-progress mw-pt-progress--med" title="Makrodefinicja: Arch Axis System Repartition (64% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../fr/Macro_Arch_Axis_System_Repartition.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro R&eacute;partition automatique du syst&egrave;me d'axes (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/Macro_Arch_Axis_System_Repartition.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Arch Axis System Repartition (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -74,9 +74,7 @@ Sistema di assi
 </tbody></table>
 <p><span typeof="mw:File"><a href="../index.php?title=ArchAxisSystemRepartition.png&amp;filetimestamp=20141220100517&amp;.html" class="mw-file-description"><img src="../File/ArchAxisSystemRepartition.png" decoding="async" width="480" height="320" class="mw-file-element" data-file-width="601" data-file-height="401"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">ArchAxisSystemRepartition</p>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -338,28 +336,28 @@ FreeCADGui.Control.showDialog(panel)
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251023170117
+Cached time: 20260119160433
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.053 seconds
-Real time usage: 0.058 seconds
-Preprocessor visited node count: 107/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.136 seconds
+Preprocessor visited node count: 106/1000000
 Post&#8208;expand include size: 2632/2097152 bytes
 Template argument size: 527/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 10354/5000000 bytes
+Unstrip post&#8208;expand size: 10372/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.923      1 -total
- 73.62%    2.888      1 Template:Macro/it
- 24.75%    0.971      1 Template:Caption
+100.00%    6.653      1 -total
+ 59.90%    3.985      1 Template:Macro/it
+ 39.04%    2.597      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53170-0!canonical and timestamp 20251023170117 and revision id 1675363. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53170-0!canonical and timestamp 20260119160433 and revision id 1741007. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
