--- a/wiki/it/Macro_Arch_Axis_System_Repartition.html
+++ b/wiki/it/Macro_Arch_Axis_System_Repartition.html
@@ -94,11 +94,8 @@ Sistema di assi
 <li>Se si seleziona una linea il Sistema di assi prende il posizionamento dalla linea altrimenti il posizionamento &egrave; 0.0.0.</li>
 <li>Se avete FreeCAD-Library Gui aperto , il file FCStd o Step selezionato viene importato e viene fatto un sistema strutturale.</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Arch_Axis_System_Repartition.png&amp;filetimestamp=20190712192832&amp;.html" class="mw-file-description"><img src="../File/Macro_Arch_Axis_System_Repartition.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_Repartition.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Arch_Axis_System_Repartition.png&amp;filetimestamp=20190712192832&amp;.html" class="mw-file-description"><img src="../File/Macro_Arch_Axis_System_Repartition.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_Repartition.FCMacro</b>
 </p>
 <pre>#!/usr/bin/env python
 # -*- coding: utf-8 -*-
@@ -325,24 +322,24 @@ class _RepartitionTaskPanel:
 panel=_RepartitionTaskPanel()
 FreeCADGui.Control.showDialog(panel)
 </pre>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Links"></span>
+</p>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <ul><li>Video <a rel="nofollow" class="external text" href="https://www.youtube.com/watch?v=jfDTkH9-I5Q">Macro in action</a></li>
 <li><a href="../Macro_PartsLibrary.html" title="Macro PartsLibrary">Macro_PartsLibrary</a> libreria delle Parti di FreeCAD</li>
 <li>Github <a rel="nofollow" class="external text" href="https://github.com/wood-galaxy/FreeCAD-scripts">Macro wood galaxy</a></li></ul>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119160433
+Cached time: 20260119160450
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.136 seconds
-Preprocessor visited node count: 106/1000000
+CPU time usage: 0.032 seconds
+Real time usage: 0.152 seconds
+Preprocessor visited node count: 105/1000000
 Post&#8208;expand include size: 2632/2097152 bytes
 Template argument size: 527/2097152 bytes
 Highest expansion depth: 5/100
@@ -352,12 +349,12 @@ Unstrip post&#8208;expand size: 10372/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.653      1 -total
- 59.90%    3.985      1 Template:Macro/it
- 39.04%    2.597      1 Template:Caption
+100.00%   17.012      1 -total
+ 54.31%    9.239      1 Template:Macro/it
+ 44.40%    7.554      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53170-0!canonical and timestamp 20260119160433 and revision id 1741007. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53170-0!canonical and timestamp 20260119160449 and revision id 1741011. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
