--- a/wiki/it/Macro_Arch_Axis_System_Repartition.html
+++ b/wiki/it/Macro_Arch_Axis_System_Repartition.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Arch_Axis_System_Repartition.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Arch Achsen System-Neupartitionierung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Arch_Axis_System_Repartition.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Arch Axis System Repartition (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Arch_Axis_System_Repartition.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro R&eacute;partition automatique du syst&egrave;me d'axes (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Arch_Axis_System_Repartition.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Arch Axis System Repartition (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -325,36 +325,33 @@ FreeCADGui.Control.showDialog(panel)
 <p><span id="Links"></span>
 </p>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <ul><li>Video <a rel="nofollow" class="external text" href="https://www.youtube.com/watch?v=jfDTkH9-I5Q">Macro in action</a></li>
 <li><a href="../Macro_PartsLibrary.html" title="Macro PartsLibrary">Macro_PartsLibrary</a> libreria delle Parti di FreeCAD</li>
 <li>Github <a rel="nofollow" class="external text" href="https://github.com/wood-galaxy/FreeCAD-scripts">Macro wood galaxy</a></li></ul>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260119160450
+Cached time: 20260119160529
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.152 seconds
-Preprocessor visited node count: 105/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.172 seconds
+Preprocessor visited node count: 101/1000000
 Post&#8208;expand include size: 2632/2097152 bytes
 Template argument size: 527/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 10372/5000000 bytes
+Unstrip post&#8208;expand size: 10376/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.012      1 -total
- 54.31%    9.239      1 Template:Macro/it
- 44.40%    7.554      1 Template:Caption
+100.00%   21.799      1 -total
+ 57.96%   12.634      1 Template:Macro/it
+ 39.44%    8.598      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53170-0!canonical and timestamp 20260119160449 and revision id 1741011. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53170-0!canonical and timestamp 20260119160529 and revision id 1741013. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
