--- a/wiki/it/Macro_Arch_Axis_System_Repartition.html
+++ b/wiki/it/Macro_Arch_Axis_System_Repartition.html
@@ -326,16 +326,16 @@ FreeCADGui.Control.showDialog(panel)
 </p>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
 <ul><li>Video <a rel="nofollow" class="external text" href="https://www.youtube.com/watch?v=jfDTkH9-I5Q">Macro in action</a></li>
-<li><a href="../Macro_PartsLibrary.html" title="Macro PartsLibrary">Macro_PartsLibrary</a> libreria delle Parti di FreeCAD</li>
+<li><a href="../it/Macro_PartsLibrary.html" title="Macro PartsLibrary/it">Macro_PartsLibrary</a> libreria delle Parti di FreeCAD</li>
 <li>Github <a rel="nofollow" class="external text" href="https://github.com/wood-galaxy/FreeCAD-scripts">Macro wood galaxy</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119160529
+Cached time: 20260119160647
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.172 seconds
+CPU time usage: 0.032 seconds
+Real time usage: 0.060 seconds
 Preprocessor visited node count: 101/1000000
 Post&#8208;expand include size: 2632/2097152 bytes
 Template argument size: 527/2097152 bytes
@@ -346,12 +346,12 @@ Unstrip post&#8208;expand size: 10376/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.799      1 -total
- 57.96%   12.634      1 Template:Macro/it
- 39.44%    8.598      1 Template:Caption
+100.00%    8.852      1 -total
+ 71.35%    6.316      1 Template:Macro/it
+ 27.51%    2.435      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53170-0!canonical and timestamp 20260119160529 and revision id 1741013. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53170-0!canonical and timestamp 20260119160647 and revision id 1741015. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
