--- a/wiki/it/Macro_Apothem_Based_Prism_GUI.html
+++ b/wiki/it/Macro_Apothem_Based_Prism_GUI.html
@@ -180,12 +180,8 @@ p()</pre>
 <p><span id="Additions"></span>
 </p>
 <h2><span class="mw-headline" id="Aggiunte">Aggiunte</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Altro">Altro</span></h2>
-<p>L'icona SVG da usare per il collegamento nella barra degli strumenti personalizzata.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Part_Prism_Apothem.svg&amp;filetimestamp=20141024202313&amp;.html" class="mw-file-description"><img src="../File/Part_Prism_Apothem.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+<p>Icona SVG da utilizzare nella scorciatoia per la barra degli strumenti personalizzata.
+</p><p><span typeof="mw:File"><a href="../index.php?title=Part_Prism_Apothem.svg&amp;filetimestamp=20141024202313&amp;.html" class="mw-file-description"><img src="../File/Part_Prism_Apothem.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Acknowledgements">Acknowledgements</span></h2>
@@ -197,13 +193,13 @@ p()</pre>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119160820
+Cached time: 20260119160858
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.030 seconds
-Real time usage: 0.067 seconds
-Preprocessor visited node count: 109/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.155 seconds
+Preprocessor visited node count: 105/1000000
 Post&#8208;expand include size: 1980/2097152 bytes
 Template argument size: 3072/2097152 bytes
 Highest expansion depth: 5/100
@@ -213,12 +209,12 @@ Unstrip post&#8208;expand size: 4293/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.337      1 -total
- 60.64%    3.843      1 Template:Macro/it
- 37.84%    2.398      1 Template:MacroCode
+100.00%   12.407      1 -total
+ 57.99%    7.195      1 Template:MacroCode
+ 41.05%    5.093      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44060-0!canonical and timestamp 20260119160820 and revision id 1741021. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44060-0!canonical and timestamp 20260119160858 and revision id 1741023. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
