--- a/wiki/it/Macro_Apothem_Based_Prism_GUI.html
+++ b/wiki/it/Macro_Apothem_Based_Prism_GUI.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Apothem Based Prism GUI (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Apothem Based Prism GUI (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Apothem Based Prism GUI (54% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Apothem Based Prism GUI (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/Macro_Apothem_Based_Prism_GUI.html" class="mw-pt-progress mw-pt-progress--med" title="&#48320;&#49900;&#44144;&#47532; &#44592;&#48152; &#44033;&#44592;&#46181; GUI &#47588;&#53356;&#47196; (31% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -185,35 +185,32 @@ p()</pre>
 </p><p><span id="Acknowledgements"></span>
 </p>
 <h2><span class="mw-headline" id="Ringraziamenti">Ringraziamenti</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Ringraziamenti_2">Ringraziamenti</span></h2>
 <p>Un grazie al principale sviluppatore di FreeCAD <a rel="nofollow" class="external text" href="https://forum.freecad.org/memberlist.php?mode=viewprofile&amp;u=765">shoogen</a> e al programmatore di FreeCAD <a rel="nofollow" class="external text" href="https://forum.freecad.org/memberlist.php?mode=viewprofile&amp;u=1375">wandererfan</a> per il loro prezioso aiuto e consulenza nella costruzione di questo Macro.
 </p>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260119160910
+Cached time: 20260119160922
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.056 seconds
-Preprocessor visited node count: 105/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.078 seconds
+Preprocessor visited node count: 101/1000000
 Post&#8208;expand include size: 1980/2097152 bytes
 Template argument size: 3072/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4293/5000000 bytes
+Unstrip post&#8208;expand size: 4297/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.004      1 -total
- 50.57%    3.036      1 Template:MacroCode
- 47.73%    2.866      1 Template:Macro/it
+100.00%    6.643      1 -total
+ 52.26%    3.472      1 Template:Macro/it
+ 45.29%    3.009      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44060-0!canonical and timestamp 20260119160910 and revision id 1741025. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44060-0!canonical and timestamp 20260119160922 and revision id 1741027. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
